# OpenCVSX

./: LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/cvsandbox/core/: __init__.py  batch.py  codegen.py  graph.py  image_io.py  op_docs.py  operation.py  pipeline.py  serialization.py  video.py
src/cvsandbox/operations/: __init__.py  analysis.py  arithmetic.py  color.py  composite.py  edge.py  features.py  filtering.py  freq.py  geometric.py  morphology.py  segmentation.py  stereo.py  threshold.py
src/cvsandbox/resources/: __init__.py  theme.qss
src/cvsandbox/ui/: app.py  batch_dialog.py  code_export_dialog.py  dataset_page.py  help_dialog.py  image_action_bar.py  image_tools_panel.py  image_view.py  main_window.py  node_graph_view.py  parameter_widgets.py  pipeline_worker.py  video_feed_controller.py
tests/core/: test_batch.py  test_codegen.py  test_graph.py  test_image_io.py  test_op_docs.py  test_pipeline.py  test_serialization.py  test_video.py
tests/operations/: test_analysis.py  test_arithmetic.py  test_color.py  test_edge.py  test_features.py  test_filtering.py  test_freq.py  test_morphology.py  test_segmentation.py  test_stereo.py  test_threshold.py
tests/ui/: test_code_export_dialog.py  test_dataset_page.py  test_downscale.py  test_help_dialog.py  test_image_view.py  test_node_graph_view.py  test_pipeline_worker.py  test_video_feed_controller.py
