[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvstudio"
version = "0.1.0"
description = "Interactive OpenCV + AI playground — chain image-processing operations with live preview and ask a vision model what the result contains."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Ömer Kuru" }]
keywords = ["opencv", "image-processing", "computer-vision", "gui", "sandbox", "playground", "vlm", "clip"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "PySide6>=6.6",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pyqtgraph>=0.13",
    "PyOpenGL>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]
# HuggingFace-backed AI operations (CLIP zero-shot classify, OWL-ViT
# detection, BLIP-2 captioning). Heavyweight (~5GB on disk once torch
# is installed), so kept opt-in. Install with:
#   pip install -e .[ai]
ai = [
    "transformers>=4.40",
    "torch>=2.0",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/OmerKuruDs/CVStudio"
Issues = "https://github.com/OmerKuruDs/CVStudio/issues"

[project.scripts]
cvstudio = "cvstudio.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cvstudio"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "N", "C4", "PIE"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]
